--- a/source/_posts/19/04/01/190401m013644.md
+++ b/source/_posts/19/04/01/190401m013644.md
@@ -36,6 +36,12 @@ date: 2019-04-01 01:36:44
   <li><strong>2019-04-20:</strong> <a href="#190420m081032">Section</a>.</li>
   <li><strong>2019-04-21:</strong> <a href="#190420m230822">Section</a>.</li>
   <li><strong>2019-04-22:</strong> <a href="#190421m232756">Section</a>.</li>
+  <li><strong>2019-04-23:</strong> <a href="#190422m232337">Section</a>.</li>
+  <li><strong>2019-04-24:</strong> <a href="#190424m003510">Section</a>.</li>
+  <li><strong>2019-04-25:</strong> <a href="#190425m075016">Section</a>.</li>
+  <li><strong>2019-04-26:</strong> <a href="#190426m005457">Section</a>.</li>
+  <li><strong>2019-04-27:</strong> <a href="#190426m231145">Section</a>.</li>
+  <li><strong>2019-04-28:</strong> <a href="#190428m000055">Section</a>.</li>
   <li><strong>{ Pollash }:</strong> <a href="#190419m212225">Section</a>.</li>
 </ol>
 <h2>2019-04<a id="190401m022048"></a></h2>
@@ -257,7 +263,7 @@ https://www.youtube.com/user/AmericanInstituteTW/videos
       <li><strong>( Webdev ) { DevelopIntelligence } - curriculum - { Vue.js }:</strong> <a href="https://www.developintelligence.com/catalog/web-development-training/vue/introduction-to-vuejs">Link</a>. Might be useful to find out more content <strong>not only Vue</strong>. </li>
     </ol>
   </li>
-  <li><strong>My rough curriculum and estimation (keep changing):</strong>
+  <li><strong>My rough schedule and estimation (keep changing):</strong>
     <ol>
       <li><strong>Total available time:</strong> 90 days.</li>
       <li><strong>Javascript fundamental:</strong> ?? days.</li>
@@ -427,7 +433,7 @@ https://www.youtube.com/user/AmericanInstituteTW/videos
 <ol>
   <li><strong>{ The News Lens } - 巴黎聖母院大火與大整修計畫 - (Notre-Dame de Paris on fire):</strong> <a href="https://youtu.be/4X6UCFcvwXY">Link</a>.</li>
   <li><strong>( Media ) { 新唐人亞太電視 }:</strong> <a href="https://youtu.be/Dq5RlAUUBcs?t=435">Link</a>. I keep this because they mentioned about democracy, media unfreedom of China , 1989 Tiananmen Square protests (64 天安門事件) and "president" (of Taiwan), it imply this media is somehow worthy to trust, though I still not doing further research about this media. // They offer more world overview, not focused on local news.</li>
-  <li><strong>( Video ) Miles Guo and Steve Bannon, a dialogue on Terry Gou’s presidential bid - (2019年4月20日班农先生与文贵谈郭台铭选台湾总统):</strong> <a href="https://youtu.be/Uh8Ourx9kRw">Link</a>. Miles Guo successfully predicted Terry Gou’s (郭台民) (Foxconn founder and CEO) will candidate the 2020 Taiwan’s presidential election. // <a href="https://youtu.be/Uh8Ourx9kRw?t=934">15:34</a>, what is the clue Miles Guo based on at that time, to predict this possibility?</li>
+  <li><strong>( Video ) Miles Guo and Steve Bannon, a dialogue on Terry Gou’s presidential bid - (2019年4月20日班农先生与文贵谈郭台铭选台湾总统):</strong> <a href="https://youtu.be/Uh8Ourx9kRw">Link</a>. Miles Guo successfully predicted Terry Gou’s (郭台銘) (Foxconn founder and CEO) will candidate the 2020 Taiwan’s presidential election. // <a href="https://youtu.be/Uh8Ourx9kRw?t=934">15:34</a>, what is the clue Miles Guo based on at that time, to predict this possibility?</li>
   <li><strong>( Video ) Corgi (dog) races in Canterbury Park in 2016:</strong> <a href="https://youtu.be/tPuKyeVsfZY">Link</a>.</li>
   <li><strong>( Game ) 踩地雷 - (Minesweeper):</strong> <a href="https://youtu.be/ZOoXpoHpFHo">Link</a>. I'm not interesting the game itself, I'm just thinking other things like, in every field, people could dive as deep as possible. And there is always some people that is highly focus on thsoe field, they never give up. And such "simple" looking game like <code>Tetris</code> and <code>Minesweepercan</code> could be very hard to [ design ]-[ programming ], I might had just heavily underestimate the logic and complexity it tooks for these "stupid simple" game, before I have some degree of self awareness of how stupid I'm was, about the real coding and complexity behind.</li>
   <li><strong>( Javascript ) Several standard way to deep clone an object:</strong> <a href="http://larry850806.github.io/2016/09/20/shallow-vs-deep-copy/">Link</a>. So ES6 ,, <code>Object.assign()</code> is useless for me since it only do "shallow clone". And using <code>JSON.stringify()</code> then <code>JSON.parse()</code>, "hack", has intrinsic drawback that don't support some javascript object. So I think I will do this stuff with <code>jquery</code> library ,, <code>$.extend()</code>, or <code>lodash</code> library.</li>
@@ -438,6 +444,137 @@ https://www.youtube.com/user/AmericanInstituteTW/videos
 <h2>2019-04-22<a id="190421m232756"></a></h2>
 <div class="imgBlock">
   <img src="/treegbBlog/fs/m/19/04/01/190401m013644/2019-04-22.svg" alt="2019-04-22">
+</div>
+<ol>
+  <li><strong>( Dog ) { Tracking dogs } and { trailing dogs }:</strong> <a href="https://youtu.be/bFVckg9ra7o">Link</a>.</li>
+  <li><strong>( Dog ) { Guide dog } puppies personality test:</strong> <a href="https://youtu.be/LgbyG6XHTpI">Link</a>. An ideal guide dog, has personality in the middle of extrem introvert and extrem extrovert.</li>
+  <li><strong>( Game ) { 隻狼 }:</strong> <a href="https://youtu.be/7MHHOHSl3pQ">Link</a>. I'm trying to extend my view about different type of game (any game) (even I won't play it at all), instead of just what I was used to.</li>
+  <li><strong>( Music ) { relaxdaily } - calming piano - #1907:</strong> <a href="https://youtu.be/hOgMI3QbZUk">Link</a>. Not distracting, suit for studying and focusing, because I will not notice the music is playing.</li>
+  <li><strong>( Music ) { DooPiano } - piano cover - { Blackpink } - don't know what to do:</strong> <a href="https://youtu.be/YOQ-Y_2A7HM">Link</a>. Not distracting, suit for studying and focusing, because I will not notice the music is playing.</li>
+  <li><strong>( SpaceX )Why does the SpaceX droneship camera cut out?:</strong> <a href="https://youtu.be/hH75bVG7HBo">Link</a>. I doubt any supporting [ statement ]-[reason ] for this, because this kind of technology and solution (any solution) should already be so stupid dead easy, for a company that can remote control vehicle that is way far from earth in the space, still this had happened many times (the live video cut off in the crucial moment). I trust with nobody, I trust with the truth and reasoning.</li>
+  <li><strong>( Politics ) { 館長 } - 20190421 - 郭台銘選總統也不投他 - 富士康竟設共產黨支部完全不像個台灣人，也不適合當總統:</strong> <a href="https://youtu.be/EDeHdCm1jF8">Link</a>.</li>
+</ol>
+
+<h2>2019-04-23<a id="190422m232337"></a></h2>
+<div class="imgBlock">
+  <img src="/treegbBlog/fs/m/19/04/01/190401m013644/2019-04-23.svg" alt="2019-04-23">
+</div>
+<ol>
+  <li><strong>( Music ) ( Classical ) Tiffany Poon plays Chopin Concerto No. 1 in E Minor Op. 11:</strong> <a href="https://youtu.be/K3GVzOR0DO0">Link</a>. Highly diffuse.</li>
+  <li><strong>( Music ) ( Electronic ) { Elektronomia } - Sky High - NoCopyrightSounds:</strong> <a href="https://youtu.be/TW9d8vYrVFQ">Link</a>. Highly focus.</li>
+  <li><strong>( Music ) ( Electronic ) Tobu - Colors:</strong> <a href="https://youtu.be/eyLml-zzXzw">Link</a>. Highly focus.</li>
+  <li><strong>( Music ) ( Pop ) 蔡依林 (Jolin Tsai) - 迷幻 (Fantasy):</strong> <a href="https://youtu.be/KhHfi7jYZa4">Link</a>.</li>
+  <li><strong>( Music ) { Girls Generation } - { Catch Me If You Can }:</strong> <a href="https://youtu.be/sSCmafwLKE4">Link</a>.</li>
+  <li><strong>( Music ) ( Symphony ) { Thomas Bergersen } - Colors of Love - album Sun:</strong> <a href="https://youtu.be/ZuGiwDQEvDc">Link</a>.</li>
+  <li><strong>( Cabling ) { Technimove } doing cabling - before & after:</strong> <a href="https://youtu.be/gI2XA_4H04A">Link</a>. Maybe it is similar to <code>refactoring</code> in programming, human eyes and mind just can't understand the visually complex or unpredictable things, sysmtem, structure, make anything predictable and conventional and reduce the elements number happens at the same time, might helps the understanding of complex code base.</li>
+</ol>
+
+<h2>2019-04-24<a id="190424m003510"></a></h2>
+<div class="imgBlock">
+  <img src="/treegbBlog/fs/m/19/04/01/190401m013644/2019-04-24.svg" alt="2019-04-24">
+</div>
+<ol>
+  <li><strong>( Music ) ( Electronic ) Tobu - Colors:</strong> <a href="https://youtu.be/eyLml-zzXzw">Link</a>. Excellent piece.</li>
+  <li><strong>( Music ) ( Electronic ) Tobu - Colors - Fl Studio { Remake } - orchestration:</strong> <a href="https://youtu.be/BNXmOUa5ddU">Link</a>, <a href="https://youtu.be/QE0KS-gV97M">link2</a>. <code>Electronic music</code> is stupid simple? This is as hard as "engineering". Maybe I'm too <strong>underestimating</strong> everything that "looks simple", just as same as how long it takes to write dead simple web apps like my current project <code>Doggo</code>, the apps looks like so dead simple at first (guess the breed of dog image, how hard could it be?), but when I dive deep down, I found it is a complex system to design and have to consider so much <u>components</u>, <u>states</u>, and <u>logics</u> working behind it, in one component it reach 1000 lines of code, not to mention the keep delaying due time. Simple things could be not simple at all.</li>
+  <li><strong>( Music ) ( Electronic ) Tobu - Life - NCS Release:</strong> <a href="https://youtu.be/OBwl2glmqC0">Link</a>.</li>
+  <li><strong>( Music ) ( Electronic ) Tobu - Sound of Goodbye:</strong> <a href="https://youtu.be/goRGKll_zE0">Link</a>. More peaceful, and monotone, idea for study.</li>
+  <li><strong>( Music ) ( Electronic ) Tobu - Seven - NCS Release:</strong> <a href="https://youtu.be/2sUupgjZ58E">Link</a>.</li>
+  <li><strong>( Music ) ( Electronic ) Kovan & Electro-Light - Skyline - NCS Release:</strong> <a href="https://youtu.be/FseAiTb8Se0">Link</a>.</li>
+  <li><strong>( Music ) ( Electronic ) Elektronomia - Sky High - NCS Release:</strong> <a href="https://youtu.be/TW9d8vYrVFQ">Link</a>.</li>
+  <li><strong>( Music ) ( Electronic ) Jim Yosef - Firefly - NCS Release:</strong> <a href="https://youtu.be/x_OwcYTNbHs">Link</a>. Can focused.</li>
+  <li><strong>( Music ) ( Electronic ) Jim Yosef - Lights - NCS Release:</strong> <a href="https://youtu.be/vb3ks4WllXA">Link</a>. Can focused, ideal.</li>
+  <li><strong>( Music ) ( Electronic ) Janji - Heroes Tonight (feat. Johnning) - NCS Release:</strong> <a href="https://youtu.be/3nQNiWdeH2Q">Link</a>.</li>
+  <li><strong>( Music ) ( Electronic ) Ahrix - Nova:</strong> <a href="https://youtu.be/X5mcY8ecs8I">Link</a>.</li>
+  <li><strong>( Music ) ( Electronic ) Disfigure - Blank VIP (feat. Tara Louise) - NCS Release:</strong> <a href="https://youtu.be/j5DCb1ycXyA">Link</a>. Distracting.</li>
+  <li><strong>( Music ) ( Electronic ) Sia - Move Your Body - Alan Walker Remix:</strong> <a href="https://youtu.be/jSSGgj8mxSc">Link</a>. Higly distracting.</li>
+  <li><strong>( Music ) ( Electronic ) Coldplay - Hymn For The Weekend - Alan Walker Remix:</strong> <a href="https://youtu.be/mOivOlP9GRk">Link</a>. Higly distracting.</li>
+  <li><strong>( Javascript ) { Number() } and { parseInt() } :</strong> <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Number">{ Number() }</a>, <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/parseInt">{ parseInt() }</a>.</li>
+</ol>
+
+<h2>2019-04-25<a id="190425m075016"></a></h2>
+<div class="imgBlock">
+  <img src="/treegbBlog/fs/m/19/04/01/190401m013644/2019-04-25.svg" alt="2019-04-25">
+</div>
+<ol>
+    <li><strong>( Music ) ( Electronic ) Tobu - Colors:</strong> <a href="https://youtu.be/eyLml-zzXzw">Link</a>. Excellent piece.</li>
+    <li><strong>( Music ) ( Electronic ) Tobu - Colors - Fl Studio { Remake } - orchestration:</strong> <a href="https://youtu.be/QE0KS-gV97M">Link</a>.</li>
+    <li><strong>( Music ) { IZ*ONE } - La Vie en Rose:</strong> <a href="https://youtu.be/WZwr2a_lFWY">Link</a>. <a href="https://youtu.be/xhdW-GceM6g">Dance practice</a>. The dance is natural, loose (diffuse) but in control. And this is <a href="https://youtu.be/1JojMj_5KY8">when you control too much</a>, and have no enough loose part, it becomes too tense. Balance between predictable and unpredictable is hard.</li>
+    <li><strong>( Music ) { IZ*ONE } - Violeta:</strong> <a href="https://youtu.be/0ncVyYpsPHk">Link</a>. Loose but in control.</li>
+    <li><strong>( Music ) { IZ*ONE } - Rumor:</strong> <a href="https://youtu.be/G8TWEmTSGRw">Link</a>. Loose but in control. Also see <a href="https://youtu.be/CqkNb1i94c0">{ IZ*ONE } - Rumor - Sub-Unit - Line Distribution</a> to see how complicated the orchestration is, behind this kind of "natural". And here only counts 5 units (members), not to mention the complexity of orchestration when <a href="https://youtu.be/PDAi2w9LRR8">full units (members) (12) join together</a>.</li>
+    <li><strong>( Music ) { TWICE } - FANCY:</strong> <a href="https://youtu.be/kOHB85vDuow">Link</a>.</li>
+  <li><strong>Network is off at my renting room:</strong>
+    <ol>
+      <li><strong>About:</strong> 網路斷線，時間從昨天 22:00 到今天早上 09:00 一樓數據機重新啟動為止。問題： 停電 (不確定哪裡停)，導致 1F 數據機跳掉？導致整棟樓都沒網路，但因為只有少數人上網，且是在離峰使用時段，所以沒有人 complain。房東兒子 09:00 時到店裡把 1F 數據機重啟後，我這邊的網路馬上正常。代表不是我電腦的問題。</li>
+      <li><strong>但可能不只一個問題點:</strong> 有可能不只一個問題點，這次是跳電問題 (也不知道他們的跳電是那裡跳？是整個電力系統跳？)，因為 6F 的 HUB 那裡也可能有不定期問題。將來再看，但至少這次不是 6F HUB 的問題。</li>
+      <li><strong>這次我電腦的網路設定:</strong> DHCP, 根本沒做任何設定就自動可以連上，電腦直接插房間來源網路。</li>
+      <li><strong>測試連線 - PC 到 Gateway:</strong> PC ,, network setting ,, IPv4 ,, Address 的地方由 DHCP 改成 Manual, 填入 Adress 192.168.21.1, Netmask 255.255.255.0, Gateway 192.168.0.1, 然後 DNS 和 Routes 那裡不用填，保留 { Automatic } to { ON }. // 完成後，用 browser request 192.168.0.1, 會出現 [ D-Link ]-[ WBR-2200 ] router 的界面 (1F 的， maybe)。但是此時不能 request www.example.com, 即使 DNS 的 { Automatic } 以切換成 { OFF }，然後填入 8.8.8.8 也還是不行，即使 Netmask 由 255.255.255.0 改成 255.255.0.0 也還是不行，不知道為什麼，真奇怪，如果說 IP address 設錯了，不能 access www.example.com 可以理解，但為什麼還可以 access 192.168.0.1？真奇怪，不解。</li>
+      <li><strong>測試連線 - PC 到 Internet (with Domain Name):</strong> PC ,, network setting ,, IPv4 ,, Address 的地方由 DHCP 改成 Manual, 填入 Adress 192.168.0.122 (隨便填的網址) (至少試過了 192.168.0.21 ~ 192.168.0.245 都可以，但是 192.168.21.1 不行), Netmask 255.255.255.0, Gateway 192.168.0.1, 然後 DNS 和 Routes 那裡不用填，保留 { Automatic } to { ON }. // 完成後，用 browser request 192.168.0.1, 會出現 [ D-Link ]-[ WBR-2200 ] router 的界面 (1F 的， maybe)。但是此時不管是 1. 把 DNS 的 { Automatic } 以切換成 { ON }, 2. 把 DNS 的 { Automatic } 切換成 { OFF }，然後填入 8.8.8.8, 3. 把 DNS 的 { Automatic } 切換成 { OFF }，然後填入 192.168.0.1，皆可 request 到 www.example.com。</li>
+      <li><strong>測試連線 - 房間的網路線，硬體本身:</strong> 房間只有給 source 網路孔，裡面的網路線都是我買的，其中一條確定有一個端口 (防呆彈片斷掉的那端)，某一個角度下會 100% 導致斷線，所以 100% 確定那端在某種角度是會接觸不良，不過另外一端良好。 // 另外一條短的網路線，接頭上只有 4 個 pin, 而不是 8 個，但還可以上網! 不知道是什麼巫術。 // PC 端 ,, 網路線的頭插上後，不管怎麼搖晃，始終亮綠燈，代表 PC 的網路 (母) 接頭沒有問題。</li>
+      <li><strong>跟房東溝通，與主動解決問題的經驗:</strong> 早上 07:30 時，打電話給房東 3 次，最後一次問他大概什麼時候會來 (店裡) 看的時候，他很情緒化 (大概是主觀的認為是認為網路斷線問題是我這邊自己產生的)。於是我跟他解釋，我們兩方都不知道問題在哪裡，但是我們都不想浪費時間，而比較好的方式是一段一段分析，把問題找出來，不然將來我們都會需要再浪費時間在這個問題上。而且未來住進來同一間房間的房客一樣會有這個問題。 // 不過這次確定是 1F router 因為 "跳電" 而導致異常。不確定未來會不會再出現問題，然後不知道問題點是否是數個。這種 bug 最難找，沒有條件式的復發性，而且一次有數個問題而不是只有一個，在整個線路上，這種相當難偵錯。// 這次房東處理態度 "一開始" 是消極的，如果沒有我自己 trouble shooting and reasoning and find the [ truth ]-[ fact ]， 不斷考慮著最不浪費時間的解法還有當機立斷跟房東 make suggestion 而不是等到其他人下班回來再問他們是否都可以上網 (然後再來解決)，我想這個問題可能一拖就是好幾天，好幾天的生產力！問題不會自己解決，不主動解決問題，問題就會解決你。</li>
+    </ol>
+  </li>
+</ol>
+
+<h2>2019-04-26<a id="190426m005457"></a></h2>
+<div class="imgBlock">
+  <img src="/treegbBlog/fs/m/19/04/01/190401m013644/2019-04-26.svg" alt="2019-04-26">
+</div>
+<ol>
+  <li><strong>( Music ) { IZ*ONE } - Rumor:</strong> <a href="https://youtu.be/uTcZ3IizpLE">Link</a>.</li>
+  <li><strong>( Dance ) { IZ*ONE } - Jo Yuri (조유리) - Violeta:</strong> <a href="https://youtu.be/Nqe2xPRIdW8">Link</a>.</li>
+  <li><strong>( KPop ) ( Funny videos ) 韓國愛豆們 舞台失誤後的可愛反應！超好笑 - DenQ:</strong> <a href="https://youtu.be/DEUj6hkkSoo">Link</a>.</li>
+  <li><strong>( Music) ( Math ) 音樂也有科學道理？Do、Re、Mi...都是如何確定的？李永樂老師講音律:</strong> <a href="https://youtu.be/cTDi7gfynUc">Link</a>.</li>
+  <li><strong>( Video ) { 看电影了没 } - { 徒手攀岩 } - 要么登顶，要么死 - 酋長岩:</strong> <a href="https://youtu.be/aGGL-LPo99s">Link</a>. 生命的意義是主觀的，客觀上是不存在的，你認為是什麼它就是什麼。而且應該是反過來，是你去 "定義" 生命的意義，而不是 "尋找" 生命的意義，因為它是主觀的。</li>
+  <li><strong>( Video ) { She's Danni } - 攀岩:</strong> <a href="https://youtu.be/DuFBmDJUPE4">Link</a>.</li>
+</ol>
+
+<h2>2019-04-27<a id="190426m231145"></a></h2>
+<div class="imgBlock">
+  <img src="/treegbBlog/fs/m/19/04/01/190401m013644/2019-04-27.svg" alt="2019-04-27">
+</div>
+<ol>
+  <li><strong> - How do you eat an elephant:</strong> I have this thought coming out after watching the talk <a href="https://youtu.be/4FJEbzPhqq8">王佑哲 Eugene Wang - { Inside } 共同創辦人 - TEDxNTUST</a>. You eat an elephant bit by bit. Only through modularization and components then you can design and manage a complex system. Only through fragment the time schedule then you can finished the project before dead line. Only throught lower down the cognitive load of every habits, then you can deal with procrastination and overcome the reluctance. // Natural is always <strong>complex</strong> (not simple) in natural, and human perfer <strong>simple</strong> all the time. When human have to face complex natural, they often figure out some tips, design pattern, solution, to deal with complex (is in all natural) problem, with simple (human friendly) way. This is why the wisdom "Less is More" is so true in many aspects. But I think we need to understand, simple is <strong>by designed (by human)</strong>, it is <strong>not how natural works</strong>. Natural tends to be complex and <strong>multiple dimensional</strong> inherently, and human tends to like simple things inherently. When we can find out a specific simple way to deal with a specific complex natural, they <strong>"matched"</strong> excellently and the solution will be considered as a good solution.</li>
+  <li><strong>( Video ) { Tiffany Poon } - Vlog - How to Balance School + Piano - #07:</strong> <a href="https://youtu.be/BM-JfaGxKFY">Link</a>. Time management, discipline and rationality, always planning ahead, setting priority and only focus on the important thing.</li>
+  <li><strong>( Music ) ( Classical ) { Tiffany Poon } - Beethoven Sonata Op.10 No.3:</strong> <a href="https://youtu.be/uWBABv4XeLk">Link</a>.</li>
+  <li><strong>{ Traversy Media } - Quality youtube channel about web development:</strong> <a href="https://youtu.be/raoOoWU7DI0?t=431">Link</a> (original title: <u>My Top 10 Learning Methods For Self Taught Developers</u>). Including <a href="https://www.youtube.com/channel/UCW5YeuERMmlnqo4oq8vwUpg/featured">The Net Ninja</a>, <a href="https://www.youtube.com/user/DevTipsForDesigners/featured">DevTips</a>, <a href="https://www.youtube.com/user/LevelUpTuts/featured">LevelUpTuts</a>, <a href="https://www.youtube.com/channel/UCSJbGtTlrDami-tDGPUV9-w/videos">Academind</a>, <a href="https://www.youtube.com/user/DesignCourse/videos">DesignCourse</a> (art, graphic design), <a href="https://www.youtube.com/channel/UCtxCXg-UvSnTKPOzLH4wJaQ">Coding Tech</a> (conferences, talks), <a href="https://www.youtube.com/user/pizzapokerguy87/featured">Dylan Israel</a>.</li>
+  <li><strong>( Webdev ) A road map (mind map) of Front-End, Back-End, Dev Ops:</strong> <a href="https://youtu.be/gVXcqO9A1vo">Link</a>. I keep this not to know everything, but to have enough vision to know what to learn (few) an what not to learn (most).</li>
+  <li><strong>My rough schedule and estimation about front-end job (keep changing):</strong>
+    <ol>
+      <li><strong>Due time:</strong> 2019-06-30.</li>
+      <li><strong>Javascript fundamental:</strong> ?? days.</li>
+      <li><strong>JQuery:</strong> ?? days. Don't need to know it well, just learn when in need.</li>
+      <li><strong>Vue.js:</strong>
+        <ol>
+          <li><strong>Estimate it takes:</strong> ?? days</li>
+          <li><strong>Current state:</strong> Have understand fundamental. Now try to learn { Vuex } ("maybe" this is a must-leanted), { vue-router } if needed.</li>
+        </ol>
+      </li>
+      <li><strong>Nodejs:</strong> ?? days. Must know.</li>
+      <li><strong>Express.js:</strong> ?? days. Must know.</li>
+      <li><strong>Git and deployment:</strong> ?? days. Could be practice when collaborating with Pollash and Woody.</li>
+      <li><strong>Webpack:</strong> ?? days. Must know.</li>
+      <li><strong>Database:</strong> ?? days. Use mysql, and find the way to do object programming with database, instead of low level SQL language.</li>
+      <li><strong>Algorithm and data structure:</strong> ?? days. Maybe no time to lean this at all. But if I need to learn, learn <a href="https://github.com/amejiarosario/dsa.js">Data Structure and Algorithms in Javascript - dsa.js - suggested by Pollash</a> first.</li>
+      <li><strong>{ Less } ( CSS pre-processor ):</strong> ?? days. Optional.</li>
+      <li><strong>Side project { Doggo }:</strong> Estimate finished in 2019-05-03, and freeze it without doing huge improvement, without doing iteration (v2, v3 ...). I should spend time on new projects, multiple projects, instead of polishing the same one to excellent.</li>
+      <li><strong>Side project 2:</strong> ?? days.</li>
+      <li><strong>Side project 3:</strong> ?? days.</li>
+      <li><strong>Redesign my own CMS:</strong> ?? days. Wow, this might cost me a month, at least (might even a lot more than this).</li>
+      <li><strong>Side project with Woody for visually impaired people:</strong> ?? days. Must done, to put commitment and obligation to practice.</li>
+      <li><strong>Resume:</strong> ?? days.</li>
+    </ol>
+  </li>
+  <li><strong>My next goal:</strong> <code>Node.js</code> and <code>Express.js</code>, they will help my next project - rewrite my own CMS.</li>
+  <li><strong>( Music ) ( Game ) Relaxing { Stardew Valley } music:</strong> <a href="https://youtu.be/JJCFQtTPq_8">Link</a>.</li>
+  <li><strong>( Javascript ) How to { bind } { this } to a setTimeout ,, callback function:</strong> Very simple, just <code>setTimeout(function () { ... }.bind(this), 2000);</code>. // I don't know I can write syntax like <code>}.bind</code> before (I thought I have to use self-invoking tricks, making 2 functions, outer function return inner function, then use <code>.bind()</code>). // It seems you can't use ES6 arrow function to replace that <code>function () ...</code> part for this one, this kind of syntax don't work on ES6 arrow function (at least for this one). // Another tricks is use like this - <code>var that = this; setTimeout( function() { that.foo(); }, 1000);</code>.</li>
+  <li><strong>( Vue.js ) Why mutating { props } is anti-pattern, and what is the solution?:</strong> <a href="https://michaelnthiessen.com/avoid-mutating-prop-directly/">Link</a>. This is by designed (intended), because if one property is allowed to be changed by multiple potential components (sync, like <code>v-model</code>), if something going wierd and you want to find the source of problem, you will found you can't find it! That property have been written everywhere (by so much components). You need to use <code>event</code> (<code>emit</code>?) to update child component data to parent component, and the real update will happens in parent component.</li>
+  <li><strong>( Vue.js ) { v-model }:</strong> <a href="https://cythilya.github.io/2017/04/14/vue-data-v-model/">Link</a>. Very good, simple, clear explanation!</li>
+  <li><strong>( Vue.js ) { Events }:</strong> <a href="https://vuejs.org/v2/guide/events.html">Link</a>.</li>
+</ol>
+
+<h2>2019-04-28<a id="190428m000055"></a></h2>
+<div class="imgBlock">
+  <img src="/treegbBlog/fs/m/19/04/01/190401m013644/2019-04-28.svg" alt="2019-04-28">
 </div>
 <ol>
   <li><strong>:</strong> <a href="">Link</a>.</li>
